--- a/Code/app/src/main/res/layout/activity_login.xml
+++ b/Code/app/src/main/res/layout/activity_login.xml
@@ -57,6 +57,7 @@
         android:layout_marginEnd="140dp"
         android:layout_marginRight="140dp"
         android:text="@string/confirm"
+        android:onClick="loginButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/userText" />
