--- a/Code/app/src/main/res/layout/activity_mood_history.xml
+++ b/Code/app/src/main/res/layout/activity_mood_history.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="40dp"
         android:layout_marginLeft="40dp"
         android:layout_marginTop="8dp"
-        android:text="@string/add"
+        android:text="Add"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -24,7 +24,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="8dp"
-        android:text="@string/edit"
+        android:text="Edit"
         app:layout_constraintStart_toEndOf="@+id/addButton"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -35,7 +35,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginTop="8dp"
-        android:text="@string/map"
+        android:text="Map"
         app:layout_constraintStart_toEndOf="@+id/editButton"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -47,7 +47,7 @@
         android:layout_marginLeft="40dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:text="@string/delete"
+        android:text="Delete"
         app:layout_constraintBottom_toTopOf="@+id/mood_history"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addButton" />
@@ -60,7 +60,7 @@
         android:layout_marginLeft="24dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:text="@string/filter"
+        android:text="Filter"
         app:layout_constraintBottom_toTopOf="@+id/mood_history"
         app:layout_constraintStart_toEndOf="@+id/deleteButton"
         app:layout_constraintTop_toBottomOf="@+id/editButton" />
@@ -73,7 +73,7 @@
         android:layout_marginLeft="24dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:text="@string/view"
+        android:text="View"
         app:layout_constraintBottom_toTopOf="@+id/mood_history"
         app:layout_constraintStart_toEndOf="@+id/filterButton"
         app:layout_constraintTop_toBottomOf="@+id/mapButton" />
@@ -89,6 +89,7 @@
         app:layout_constraintTop_toBottomOf="@+id/filterButton">
 
     </ListView>
+
     <Button
         android:id="@+id/requestsButton"
         android:layout_width="wrap_content"
@@ -96,7 +97,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginBottom="8dp"
-        android:text="@string/requests"
+        android:text="Requests"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -107,7 +108,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginBottom="8dp"
-        android:text="@string/follow"
+        android:text="Follow"
         app:layout_constraintBottom_toTopOf="@+id/requestsButton"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -118,7 +119,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="64dp"
-        android:text="@string/view_followers"
+        android:text="View Followers"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
