--- a/Code/app/src/main/res/layout/activity_follow_history.xml
+++ b/Code/app/src/main/res/layout/activity_follow_history.xml
@@ -16,6 +16,7 @@
         app:layout_constraintTop_toBottomOf="@+id/returnButton">
 
     </ListView>
+
     <Button
         android:id="@+id/returnButton"
         android:layout_width="wrap_content"
@@ -23,6 +24,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
+        android:onClick="ReturnButton"
         android:text="@string/return_to_mood_history"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
