--- a/Code/app/src/main/res/layout/activity_usermap.xml
+++ b/Code/app/src/main/res/layout/activity_usermap.xml
@@ -13,6 +13,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginTop="16dp"
+        android:onClick="ReturnButton"
         android:text="@string/return_to_mood_history"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -24,6 +25,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="6dp"
         android:layout_marginRight="6dp"
+        android:onClick="OthersButton"
         android:text="Other's"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
