--- a/Code/app/src/main/res/layout/activity_view_mood.xml
+++ b/Code/app/src/main/res/layout/activity_view_mood.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".View">
+    tools:context=".ViewMood">
 
     <Button
         android:id="@+id/returnButton"
