--- a/Code/app/src/main/res/layout/activity_mood_list.xml
+++ b/Code/app/src/main/res/layout/activity_mood_list.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MoodListActivity">
+    tools:context=".MoodHistory">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
