--- a/Code/app/src/main/res/layout/activity_add.xml
+++ b/Code/app/src/main/res/layout/activity_add.xml
@@ -73,84 +73,55 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dateView" />
 
-    <EditText
-        android:id="@+id/dateText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="13dp"
-        android:layout_marginLeft="13dp"
-        android:ems="10"
-        android:hint="YYYY/MM/DD"
-        android:inputType="textPersonName"
-        app:layout_constraintStart_toEndOf="@+id/dateView"
-        app:layout_constraintTop_toBottomOf="@+id/timeText" />
-
-    <EditText
-        android:id="@+id/timeText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="44dp"
-        android:ems="10"
-        android:hint="HOUR:MINUTE"
-        android:inputType="textPersonName"
-        app:layout_constraintStart_toEndOf="@+id/timeView"
-        app:layout_constraintTop_toBottomOf="@+id/returnButton" />
-
     <ImageButton
         android:id="@+id/greatButton"
         style="@style/Widget.AppCompat.ImageButton"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="24dp"
         android:scaleType="centerCrop"
         app:layout_constraintStart_toEndOf="@+id/moodView"
-        app:layout_constraintTop_toBottomOf="@+id/dateText"
+        app:layout_constraintTop_toBottomOf="@+id/dateButton"
         app:srcCompat="@drawable/great" />
 
     <ImageButton
         android:id="@+id/goodButton"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginTop="32dp"
         android:scaleType="centerCrop"
         app:layout_constraintStart_toEndOf="@+id/greatButton"
-        app:layout_constraintTop_toBottomOf="@+id/dateText"
+        app:layout_constraintTop_toTopOf="@+id/greatButton"
         app:srcCompat="@drawable/good" />
 
     <ImageButton
         android:id="@+id/bagButton"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginTop="32dp"
         android:scaleType="centerCrop"
         app:layout_constraintStart_toEndOf="@+id/neutralButton"
-        app:layout_constraintTop_toBottomOf="@+id/dateText"
+        app:layout_constraintTop_toTopOf="@+id/neutralButton"
         app:srcCompat="@drawable/bad" />
 
     <ImageButton
         android:id="@+id/neutralButton"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginTop="32dp"
         android:scaleType="centerCrop"
         app:layout_constraintStart_toEndOf="@+id/goodButton"
-        app:layout_constraintTop_toBottomOf="@+id/dateText"
+        app:layout_constraintTop_toTopOf="@+id/goodButton"
         app:srcCompat="@drawable/neutral" />
 
     <ImageButton
         android:id="@+id/worstButton"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_marginTop="32dp"
         android:scaleType="centerCrop"
         app:layout_constraintStart_toEndOf="@+id/bagButton"
-        app:layout_constraintTop_toBottomOf="@+id/dateText"
+        app:layout_constraintTop_toTopOf="@+id/bagButton"
         app:srcCompat="@drawable/worst" />
 
     <Button
-        android:id="@+id/confirmButton"
+        android:id="@+id/ConfirmAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="128dp"
@@ -161,7 +132,8 @@
         android:text="@string/confirm"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addSocialText" />
 
     <ToggleButton
         android:id="@+id/photoToggle"
@@ -186,5 +158,68 @@
         android:text="Photo?"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/neutralButton" />
+
+    <Button
+        android:id="@+id/timeButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="44dp"
+        android:text="Select a time"
+        app:layout_constraintStart_toEndOf="@+id/timeView"
+        app:layout_constraintTop_toBottomOf="@+id/returnButton" />
+
+    <Button
+        android:id="@+id/dateButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:text="Select a time"
+        app:layout_constraintStart_toEndOf="@+id/dateView"
+        app:layout_constraintTop_toBottomOf="@+id/timeButton" />
+
+    <TextView
+        android:id="@+id/reasonView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="64dp"
+        android:layout_marginLeft="64dp"
+        android:layout_marginTop="64dp"
+        android:text="Reason:"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/locationView" />
+
+    <TextView
+        android:id="@+id/socialView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="Social Situation:"
+        app:layout_constraintStart_toStartOf="@+id/reasonView"
+        app:layout_constraintTop_toBottomOf="@+id/reasonView" />
+
+    <EditText
+        android:id="@+id/addReasonText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:text="Add reason"
+        android:textSize="8sp"
+        app:layout_constraintBottom_toBottomOf="@+id/reasonView"
+        app:layout_constraintStart_toEndOf="@+id/reasonView" />
+
+    <EditText
+        android:id="@+id/addSocialText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:text="Add Social Situation"
+        android:textSize="8sp"
+        app:layout_constraintBottom_toBottomOf="@+id/socialView"
+        app:layout_constraintStart_toEndOf="@+id/socialView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
