--- a/Code/app/src/main/res/layout/activity_add.xml
+++ b/Code/app/src/main/res/layout/activity_add.xml
@@ -10,12 +10,11 @@
         android:id="@+id/locationToggle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="132dp"
         android:text="ToggleButton"
         android:textOff="No"
         android:textOn="Yes"
         app:layout_constraintStart_toEndOf="@+id/locationView"
-        app:layout_constraintTop_toBottomOf="@+id/neutralButton" />
+        app:layout_constraintTop_toTopOf="@+id/locationView" />
 
     <TextView
         android:id="@+id/locationView"
@@ -23,10 +22,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="56dp"
         android:layout_marginLeft="56dp"
-        android:layout_marginTop="148dp"
+        android:layout_marginTop="32dp"
         android:text="Location?"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/neutralButton" />
+        app:layout_constraintTop_toBottomOf="@+id/photoView" />
 
     <Button
         android:id="@+id/returnButton"
@@ -46,9 +45,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="64dp"
-        android:text="TIME:"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="52dp"
+        android:text=""
+        app:layout_constraintStart_toEndOf="@+id/timeButton"
         app:layout_constraintTop_toBottomOf="@+id/returnButton" />
 
     <TextView
@@ -57,9 +56,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:text="DATE:"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="24dp"
+        android:text=""
+        app:layout_constraintStart_toEndOf="@+id/dateButton"
         app:layout_constraintTop_toBottomOf="@+id/timeView" />
 
     <TextView
@@ -132,8 +131,7 @@
         android:text="@string/confirm"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addSocialText" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ToggleButton
         android:id="@+id/photoToggle"
@@ -141,12 +139,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="9dp"
         android:layout_marginLeft="9dp"
-        android:layout_marginTop="84dp"
         android:text="ToggleButton"
         android:textOff="No"
         android:textOn="Yes"
         app:layout_constraintStart_toEndOf="@+id/photoView"
-        app:layout_constraintTop_toBottomOf="@+id/neutralButton" />
+        app:layout_constraintTop_toTopOf="@+id/photoView" />
 
     <TextView
         android:id="@+id/photoView"
@@ -154,7 +151,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="64dp"
         android:layout_marginLeft="64dp"
-        android:layout_marginTop="104dp"
+        android:layout_marginTop="48dp"
         android:text="Photo?"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/neutralButton" />
@@ -165,9 +162,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="36dp"
         android:text="Select a time"
-        app:layout_constraintStart_toEndOf="@+id/timeView"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/returnButton" />
 
     <Button
@@ -176,8 +173,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:text="Select a time"
-        app:layout_constraintStart_toEndOf="@+id/dateView"
+        android:text="Select a date"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/timeButton" />
 
     <TextView
@@ -206,8 +203,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:text="Add reason"
-        android:textSize="8sp"
+        android:hint="Add reason"
+        android:text=""
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@+id/reasonView"
         app:layout_constraintStart_toEndOf="@+id/reasonView" />
 
@@ -217,8 +215,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:text="Add Social Situation"
-        android:textSize="8sp"
+        android:hint="Add social situation"
+        android:text=""
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@+id/socialView"
         app:layout_constraintStart_toEndOf="@+id/socialView" />
 
