--- a/Code/app/src/main/res/layout/activity_view_mood.xml
+++ b/Code/app/src/main/res/layout/activity_view_mood.xml
@@ -79,4 +79,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/socialView"
         app:srcCompat="@mipmap/ic_launcher" />
+
+    <Button
+        android:id="@+id/viewLocation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:onClick="LocationButton"
+        android:text="View Location"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
