--- a/Code/app/src/main/res/layout/activity_add.xml
+++ b/Code/app/src/main/res/layout/activity_add.xml
@@ -133,7 +133,7 @@
         android:layout_marginEnd="128dp"
         android:layout_marginRight="128dp"
         android:layout_marginBottom="50dp"
-        android:text="@string/confirm"
+        android:text="confirm"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
