--- a/Code/app/src/main/res/layout/activity_add.xml
+++ b/Code/app/src/main/res/layout/activity_add.xml
@@ -24,25 +24,25 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/Addcontent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <ImageView
-                android:id="@+id/addEmote"
+            <androidx.viewpager.widget.ViewPager
+                android:id="@+id/viewPager"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:adjustViewBounds="true"
-                android:scaleType="fitCenter"
-                android:src="@drawable/neutral"
                 app:layout_constraintEnd_toEndOf="@id/guideline"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/Addcontent">
+                app:layout_constraintTop_toTopOf="@+id/Addcontent"
+                app:layout_constraintDimensionRatio="1:1">
 
-            </ImageView>
+            </androidx.viewpager.widget.ViewPager>
 
             <ToggleButton
                 android:id="@+id/locationToggle"
@@ -130,7 +130,7 @@
                 android:layout_marginTop="24dp"
                 android:text="Select a time"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/addEmote" />
+                app:layout_constraintTop_toBottomOf="@+id/viewPager" />
 
             <Button
                 android:id="@+id/dateButton"
@@ -175,7 +175,7 @@
                 android:inputType="text"
                 android:maxLength="20"
                 android:text=""
-                android:textSize="12sp"
+                android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="@+id/reasonView"
                 app:layout_constraintStart_toEndOf="@+id/reasonView" />
 
@@ -194,9 +194,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_percent="1.0"
+                app:layout_constraintGuide_percent="0.75"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                app:layout_constraintStart_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/ConfirmAdd" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
