--- a/Code/app/src/main/res/layout/activity_mood_history.xml
+++ b/Code/app/src/main/res/layout/activity_mood_history.xml
@@ -1,139 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MoodHistory">
 
-    <Button
-        android:id="@+id/worstButton"
-        android:layout_width="53dp"
-        android:layout_height="49dp"
-        android:onClick="worstButton"
-        android:text="@string/Worst"
-        android:visibility="invisible"
-        app:layout_constraintStart_toEndOf="@+id/badButton"
-        app:layout_constraintTop_toTopOf="@+id/badButton" />
+    <HorizontalScrollView
+        android:id="@+id/FilterScroll"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:visibility="gone"
 
-    <Button
-        android:id="@+id/badButton"
-        android:layout_width="53dp"
-        android:layout_height="49dp"
-        android:onClick="badButton"
-        android:text="@string/Bad"
-        android:visibility="invisible"
-        app:layout_constraintStart_toEndOf="@+id/neutralButton"
-        app:layout_constraintTop_toTopOf="@+id/neutralButton" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/filterButton">
 
-    <Button
-        android:id="@+id/neutralButton"
-        android:layout_width="53dp"
-        android:layout_height="49dp"
-        android:onClick="neutralButton"
-        android:text="@string/Neutral"
-        android:visibility="invisible"
-        app:layout_constraintStart_toEndOf="@+id/goodButton"
-        app:layout_constraintTop_toTopOf="@+id/goodButton" />
+        <LinearLayout
+            android:id="@+id/FilterButtons"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
+            <TextView
+                android:paddingTop="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="Filter By:">
 
-    <Button
-        android:id="@+id/goodButton"
-        android:layout_width="53dp"
-        android:layout_height="49dp"
-        android:onClick="goodButton"
-        android:text="@string/Good"
-        android:visibility="invisible"
-        app:layout_constraintStart_toEndOf="@+id/greatButton"
-        app:layout_constraintTop_toBottomOf="@+id/allButton" />
+            </TextView>
 
-    <Button
-        android:id="@+id/greatButton"
-        android:layout_width="53dp"
-        android:layout_height="49dp"
-        android:onClick="greatButton"
-        android:text="@string/Great"
-        android:visibility="invisible"
-        app:layout_constraintStart_toStartOf="@+id/allButton"
-        app:layout_constraintTop_toBottomOf="@+id/allButton" />
+            <ImageButton
+                android:id="@+id/GreatFilterButton"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:adjustViewBounds="true"
+                android:onClick="greatFilterButton"
+                android:padding="10dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/great">
+            </ImageButton>
+
+            <ImageButton
+                android:id="@+id/GoodFilterButton"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:adjustViewBounds="true"
+                android:onClick="goodFilterButton"
+                android:padding="10dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/good">
+            </ImageButton>
+
+            <ImageButton
+                android:id="@+id/NeutralFilterButton"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:adjustViewBounds="true"
+                android:onClick="neutralFilterButton"
+                android:padding="10dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/neutral">
+            </ImageButton>
+
+            <ImageButton
+                android:id="@+id/BadFilterButton"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:adjustViewBounds="true"
+                android:onClick="badFilterButton"
+                android:padding="10dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/bad">
+            </ImageButton>
+
+            <ImageButton
+                android:id="@+id/WorstFilterButton"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:adjustViewBounds="true"
+                android:onClick="worstFilterButton"
+                android:padding="10dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/worst">
+            </ImageButton>
+
+            <Button
+                android:id="@+id/ClearFilterButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="clearFilterButton"
+                android:text="Clear">
+            </Button>
+
+
+        </LinearLayout>
+    </HorizontalScrollView>
 
     <Button
         android:id="@+id/addButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
         android:layout_marginTop="8dp"
         android:onClick="addButton"
         android:text="@string/add"
+        app:layout_constraintEnd_toStartOf="@+id/filterButton"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/editButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/edit"
-        android:onClick="editButton"
-        app:layout_constraintStart_toEndOf="@+id/addButton"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/mapButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
         android:layout_marginTop="8dp"
-        android:text="@string/map"
         android:onClick="mapButton"
-        app:layout_constraintStart_toEndOf="@+id/editButton"
+        android:text="@string/map"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/filterButton"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/deleteButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:onClick="deleteButton"
-        android:text="@string/delete"
-        app:layout_constraintBottom_toTopOf="@+id/mood_history"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addButton" />
 
     <Button
         android:id="@+id/filterButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
         android:onClick="filterButton"
         android:text="@string/filter"
-        app:layout_constraintBottom_toTopOf="@+id/mood_history"
-        app:layout_constraintStart_toEndOf="@+id/deleteButton"
-        app:layout_constraintTop_toBottomOf="@+id/editButton" />
-
-    <Button
-        android:id="@+id/viewButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="@string/view"
-        android:onClick="viewButton"
-        app:layout_constraintBottom_toTopOf="@+id/mood_history"
-        app:layout_constraintStart_toEndOf="@+id/filterButton"
-        app:layout_constraintTop_toBottomOf="@+id/mapButton" />
-
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
         android:id="@+id/mood_history"
@@ -142,7 +136,7 @@
         app:layout_constraintBottom_toTopOf="@+id/viewFollowersButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/filterButton">
+        app:layout_constraintTop_toBottomOf="@id/FilterScroll">
 
     </ListView>
 
@@ -180,17 +174,4 @@
         android:onClick="viewFollowButton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
-
-    <Button
-        android:id="@+id/allButton"
-        android:layout_width="53dp"
-        android:layout_height="49dp"
-        android:onClick="allButton"
-        android:text="All"
-        android:visibility="invisible"
-        app:layout_constraintEnd_toStartOf="@+id/viewFollowersButton"
-        app:layout_constraintHorizontal_bias="0.228"
-        app:layout_constraintStart_toEndOf="@+id/followButton"
-        app:layout_constraintTop_toBottomOf="@+id/mood_history" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
