--- a/Code/app/src/main/res/layout/activity_usermap.xml
+++ b/Code/app/src/main/res/layout/activity_usermap.xml
@@ -29,4 +29,12 @@
         android:text="Other's"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    <fragment
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/Usermap"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context="com.example.myapplication.Usermap" />
 </androidx.constraintlayout.widget.ConstraintLayout>
